holos/deploy/clusters/k3d-holos/components/application/my-app/workload/service-my-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: my-app
  name: my-app
  namespace: my-project
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: my-app
