holos/deploy/clusters/k3d-holos/components/application/my-app/workload/httproute-my-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: my-app
  name: my-app
  namespace: my-project
spec:
  hostnames:
  - my-app.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-gateways
  rules:
  - backendRefs:
    - name: my-app
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
